--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,8 @@ body {
   line-height: 1;
   letter-spacing: -0.5px;
 }
+
+
 .topnav a {
   text-decoration: none;
   text-transform: capitalize;
@@ -89,4 +91,25 @@ body {
 }
 .home .inner-box .input-prompt input[type="submit"] {
   width: 10%;   
+}
+
+@media (max-width:768px){
+  .topnav h1 {
+    font-size: 4vw;
+  }
+  .topnav a {
+    font-size: 4vw;
+  }
+  .home .inner-box{
+    width: 90%;
+  }
+  .home .inner-box .input-prompt{
+    padding: 0 4vw;
+  }
+  .home .inner-box .input-prompt input{
+    width: 80%;
+  }
+  .home .inner-box .input-prompt input[type="submit"] {
+    width: 20%;
+  }
 }
